Implement CQ to SQL conversion